--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>Vite + React + TS</title>
+    <title>Sid's Portfolio</title>
     <meta name="permissions-policy" content="microphone=*, camera=*" />
   </head>
   <body>
